# 2out

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  DEPLOY.md  Doxyfile  LICENSE  README.md  conanfile.py  shippable.yml  style.sh  uncrustify.conf
.circleci/: config.yml
.github/workflows/: build.yml  release.yml  testing.yml
2out/: 2out.h  AllMatch.cpp  AllMatch.h  CMakeLists.txt  CondResult.cpp  CondResult.h  ContainMatch.cpp  ContainMatch.h  ContainTest.cpp  ContainTest.h  CountError.cpp  CountError.h  CountFailure.cpp  CountFailure.h  CountTest.cpp  CountTest.h  CtorExceptionText.h  EndsWithMatch.cpp  EndsWithMatch.h  EndsWithTest.cpp  EndsWithTest.h  EqualMatch.cpp  EqualMatch.h  EqualTest.cpp  EqualTest.h  Error.cpp  Error.h  ErrorResult.cpp  ErrorResult.h  Failure.cpp  Failure.h  FailureCount.cpp  FailureCount.h  FailureResult.cpp  FailureResult.h  Format.h  FunctionText.cpp  FunctionText.h  GtestReportText.cpp  GtestReportText.h  (+92 more)
2out/dirty/: Test.cpp  Test.h
example/: CMakeLists.txt  Money.cpp  Money.h  MoneyText.h  RealMoney.cpp  TUTORIAL1.ru.md  TUTORIAL2.ru.md  TimesMoney.cpp  TimesMoney.h  example.cpp
include/: 2out.h  Assertion.h  AssertionResult.h  Error.h  Failure.h  FailureCount.h  Format.h  IsEqual.h  JUnitXmlReport.h  Report.h  ReprSigned.h  ReprString.h  Representation.h  ResNamed.h  ResSimple.h  ResSuite.h  ResTimed.h  Result.h  StringRepr.h  Success.h  Test.h  TestContainText.h  TestCount.h  TestEqual.h  TestNamed.h  TestSuite.h  TextReport.h  TstSimple.h  TstSuite.h  TstTemplate.h  TstTimed.h
src/: AssertionResult.cpp  CMakeLists.txt  Error.cpp  Failure.cpp  FailureCount.cpp  IsEqual.cpp  JUnitXmlReport.cpp  ResNamed.cpp  ResSimple.cpp  ResSuite.cpp  ResTimed.cpp  Result.cpp  Success.cpp  TestContainText.cpp  TestCount.cpp  TestEqual.cpp  TestNamed.cpp  TestSafe.cpp  TestSuite.cpp  TestTimed.cpp  TextReport.cpp  TstSimple.cpp  TstSuite.cpp  TstTimed.cpp
test/: CMakeLists.txt  CondResultTest.cpp  CondResultTest.h  ContainMatchTest.cpp  ContainMatchTest.h  ContainTestTest.cpp  ContainTestTest.h  CountErrorTest.cpp  CountErrorTest.h  CountFailureRepr.cpp  CountFailureRepr.h  CountFailureTest.cpp  CountFailureTest.h  CountTestTest.cpp  CountTestTest.h  CtorExceptionTextTest.cpp  CtorExceptionTextTest.h  DirtyTestTest.cpp  DirtyTestTest.h  EndsWithMatchTest.cpp  EndsWithMatchTest.h  EndsWithTestTest.cpp  EndsWithTestTest.h  FailureCountTest.cpp  FailureCountTest.h  FunctionTextTest.cpp  FunctionTextTest.h  GtestReportTextTest.cpp  GtestReportTextTest.h  JUnitXmlReportTest.cpp  JUnitXmlReportTest.h  MatchTestTest.cpp  MatchTestTest.h  MethodExceptionTextTest.cpp  MethodExceptionTextTest.h  NamedTestTest.cpp  NamedTestTest.h  OoutReportTextTest.cpp  OoutReportTextTest.h  PrintableTextTest.cpp  (+48 more)
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tutorial/: Bank.cpp  Bank.h  CMakeLists.txt  ExchangedMoney.cpp  ExchangedMoney.h  Money.h  MoneyText.cpp  MoneyText.h  OrderItemMoney.cpp  OrderItemMoney.h  OrderMoney.cpp  OrderMoney.h  OrderMoneyTest.cpp  OrderMoneyTest.h  RealMoney.cpp  RealMoney.h  TUTORIAL1.ru.md  TUTORIAL2.ru.md  TUTORIAL3.ru.md  TUTORIAL4.ru.md  TUTORIAL5.ru.md  TUTORIAL6.ru.md  TUTORIAL7.ru.md  tutorial.cpp
